--- a/lightspeed/modules/con_lightspeed-key-features.adoc
+++ b/lightspeed/modules/con_lightspeed-key-features.adoc
@@ -21,6 +21,6 @@ For each generated code recommendation, {LightspeedShortName} lists content sour
 +
 {LightspeedShortName} offers post-processing capabilities that augment {ibmwatsonxcodeassistant} and improve the quality and accuracy of code recommendations. 
 
-* *Content modernization*
+* *Content maintenance and modernization*
 +
 The Ansible code bot scans existing content collections, roles, and playbooks through Git repositories, and proactively creates pull requests whenever best practices or quality improvement recommendations are available. The bot automatically submits pull requests to the repository, which proactively alerts the repository owner to a recommended change to their content. 
