--- a/lightspeed/modules/con_lightspeed-process.adoc
+++ b/lightspeed/modules/con_lightspeed-process.adoc
@@ -15,7 +15,7 @@ To use {LightspeedShortName}, ensure that you have the following components:
 
 == Process for using {LightspeedShortName}
 
-* Red Hat customer Portal organization administrators can use this guide to: 
+* Red Hat customer portal organization administrators can use this guide to: 
 ** xref:configure-code-assistant_lightspeed-user-guide[Connect {LightspeedShortName} to {ibmwatsonxcodeassistant} instance]
 ** xref:obtain-config-wca-and-model-id_configure-code-assistant[Configure the {ibmwatsonxcodeassistant} model that you want to use]
 ** xref:configuring-custom-models_lightspeed-user-guide[Configure custom models] 
