--- a/lightspeed/modules/con_training-data.adoc
+++ b/lightspeed/modules/con_training-data.adoc
@@ -8,7 +8,7 @@
 
 {LightspeedFullName} uses Ansible-specific IBM watsonx Granite models unique to your organization. These models are provided, managed, and maintained by IBM. You can use the Ansible-specific IBM watsonx Granite model as the default model for {LightspeedShortName}, so that all Ansible Lightspeed users in your organization can use the fine-tuned model. 
 
-You can configure {LightspeedShortName} to use one of the following models:as
+You can configure {LightspeedShortName} to use one of the following models:
 
 * *Base model*: A default model that enables all users in your organization to use generative AI with {LightspeedShortName}.
 
