--- a/lightspeed/modules/proc_obtain-config-wca-and-model-id.adoc
+++ b/lightspeed/modules/proc_obtain-config-wca-and-model-id.adoc
@@ -11,7 +11,8 @@ For information about how to obtain a WCA API key and model ID from {ibmwatsonxc
 
 .Procedure
 
-. Log in to the link:https://console.redhat.com/preview/ansible/seats-administration[Ansible Lightspeed with {ibmwatsonxcodeassistant} Hybrid Cloud Console] as an organization administrator.
+. Log in to the link:https://c.ai.ansible.redhat.com/[Ansible Lightspeed portal] as an organization administrator.
+. From the login screen, click *Admin Portal*.
 . Specify the WCA key of your {ibmwatsonxcodeassistant} instance:
 .. Under *IBM Cloud API Key*, click *Add API key*. A screen to enter the *API Key* is displayed. 
 .. Enter the API Key.
