--- a/lightspeed/modules/proc_troubleshooting-lightspeed-config.adoc
+++ b/lightspeed/modules/proc_troubleshooting-lightspeed-config.adoc
@@ -11,7 +11,7 @@ If you are the Red Hat organization administrator, before you access the Ansible
 
 * You have a valid {PlatformNameShort} subscription.
 
-== Cannot upload the WCA key
+== Cannot save the WCA key
 
 When you enter the Watsonx Code Assistant (WCA) API key, authentication fails and shows the following error message: 
 
