--- a/lightspeed/modules/proc_log-in-administrator-portal.adoc
+++ b/lightspeed/modules/proc_log-in-administrator-portal.adoc
@@ -14,7 +14,7 @@
 . Click menu:Log in[Log in with Red Hat].
 . Enter your Red Hat account username and password. The Ansible Lightspeed Service uses {RHSSO} ({RHSSOshort}) for authentication. 
 +
-As part of the authentication process, the Ansible Lightspeed Service checks whether your organization has a trial or paid subscription to both {PlatformNameShort} and {ibmwatsonxcodeassistant}. On successful authentication, the login screen is displayed along with your username and your assigned user role.
+As part of the authentication process, the Ansible Lightspeed Service checks whether your organization has an active {PlatformNameShort} subscription. On successful authentication, the login screen is displayed along with your username and your assigned user role.
 . From the login screen, click *Admin Portal*.
 +
 You are redirected to the {LightspeedFullName} administrator portal where you can connect {LightspeedShortName} to your {ibmwatsonxcodeassistant} instance.
