--- a/lightspeed/modules/proc_provide-feedback.adoc
+++ b/lightspeed/modules/proc_provide-feedback.adoc
@@ -4,7 +4,7 @@
 
 = Providing feedback on the Ansible Lightspeed service
 
-{LightspeedFullName} is designed to be improved through feedback on the quality of its suggestions. The technical details of user experiences with Lightspeed are usefull in informing further improvements.
+{LightspeedFullName} is designed to be improved through feedback on the quality of its suggestions. The technical details of user experiences with {LightspeedShortName} are useful in informing further improvements.
 
 You can submit feedback through the following channels: 
 
