--- a/lightspeed/modules/proc_troubleshooting-vscode.adoc
+++ b/lightspeed/modules/proc_troubleshooting-vscode.adoc
@@ -39,4 +39,4 @@ To resolve this error, log out of VS Code and log in again using your Red Hat ac
 The following error message is displayed: +
 `Your trial to the generative AI model has expired. Refer to your IBM Cloud Account to re-enable access to the {ibmwatsonxcodeassistant}.`
 
-To resolve this error, ensure that your {ibmwatsonxcodeassistant} plan supports tuning of custom models. Refer to your IBM Cloud account and select an upgrade option. 
+To resolve this error, refer to your IBM Cloud account and select an upgrade option. 
