--- a/lightspeed/titles/lightspeed-release-notes/master.adoc
+++ b/lightspeed/titles/lightspeed-release-notes/master.adoc
@@ -11,4 +11,6 @@ include::attributes/attributes.adoc[]
 = {LightspeedFullName} Release Notes
  
 include::aap-common/making-open-source-more-inclusive.adoc[leveloffset=+1]
+include::modules/lightspeed-intro.adoc[leveloffset=+1]
+include::modules/lightspeed-rn-15feb2024.adoc[leveloffset=+1]
 include::modules/lightspeed-rn-25oct2023.adoc[leveloffset=+1]
