--- a/downstream/modules/platform/proc-creating-the-custom-execution-environment-definition.adoc
+++ b/downstream/modules/platform/proc-creating-the-custom-execution-environment-definition.adoc
@@ -70,7 +70,7 @@ additional_build_steps:
 ----
 +
 
-. Create an `ansible.cfg` file under the `files/` subdirectory that points to your {PrivateHubName}, and contains the token used to authenticate to the hub and download collections.
+. Create an `ansible.cfg` file under the `files/` subdirectory that points to your {PrivateHubName}.
 +
 ----
 $ cat files/ansible.cfg
