AAP-20603: Updated content per consumption-based pricing changes and incorporated peer feedback

--- a/lightspeed/modules/con_lightspeed-key-features.adoc
+++ b/lightspeed/modules/con_lightspeed-key-features.adoc
@@ -23,4 +23,4 @@ For each generated code recommendation, {LightspeedShortName} lists content sour
 
 * *Content maintenance and modernization*
 +
-The Ansible code bot scans existing content collections, roles, and playbooks through Git repositories, and proactively creates pull requests whenever best practices or quality improvement recommendations are available. The bot automatically submits pull requests to the repository, which proactively alerts the repository owner to a recommended change to their content. 
+The {AnsibleCodeBot} scans existing content collections, roles, and playbooks through Git repositories, and proactively creates pull requests whenever best practices or quality improvement recommendations are available. The bot automatically submits pull requests to the repository, which proactively alerts the repository owner to a recommended change to their content. 
