--- a/lightspeed/modules/proc_multi-task-recs.adoc
+++ b/lightspeed/modules/proc_multi-task-recs.adoc
@@ -10,7 +10,7 @@ For example, to automate a multitask of installing PostgreSQL server and running
 .Prerequisites
 
 * You are part of an organization that has a trial or paid subscription to both {PlatformNameShort} and {ibmwatsonxcodeassistant}.
-* You have xref:configuring-with-code-assistant_lightspeed-user-guide[installed and configured Ansible VS Code extension].
+* You have xref:configuring-with-code-assistant_lightspeed-user-guide[installed and configured the Ansible VS Code extension].
 
 .Procedure
 
