--- a/lightspeed/assemblies/assembly_using-code-bot-for-suggestions.adoc
+++ b/lightspeed/assemblies/assembly_using-code-bot-for-suggestions.adoc
@@ -10,9 +10,9 @@ ifdef::context[:parent-context: {context}]
 
 [role="_abstract"]
 
-The {AnsibleCodeBot} scans existing content collections, roles, and playbooks hosted in GitHub repositories, and proactively creates pull requests whenever best practices or quality improvement recommendations are available. The bot automatically submits pull requests to the repository, which proactively alerts the repository owner to a recommended change to their content . You can configure {AnsibleCodeBot} to scan your existing Git repositories (both public and private). Your organization must have a valid {LightspeedFullName} subscription to use Ansible code bot. 
+The {AnsibleCodeBot} scans existing content collections, roles, and playbooks hosted in GitHub repositories, and proactively creates pull requests whenever best practices or quality improvement recommendations are available. The bot automatically submits pull requests to the repository, which proactively alerts the repository owner to a recommended change to their content . You can configure {AnsibleCodeBot} to scan your existing Git repositories (both public and private). Your organization must have a valid {LightspeedFullName} subscription to use {AnsibleCodeBot}. 
 
-{AnsibleCodeBot} processes your code repositories to recommend code quality improvements. It is intended to promote proven practices, patterns, and behaviors while avoiding common errors that can easily lead to bugs or make code harder to maintain. {AnsibleCodeBot} scans your Ansible content to ensure that it adheres to Ansible best practices.
+{AnsibleCodeBot} scans your code repositories to recommend code quality improvements. It promotes Ansible best practices while avoiding common errors that can lead to bugs or make code harder to maintain. 
 
 [IMPORTANT]
 ====
