--- a/lightspeed/modules/con-lightspeed-about.adoc
+++ b/lightspeed/modules/con-lightspeed-about.adoc
@@ -8,7 +8,7 @@
 
 {LightspeedShortName} is the cloud service that enables integration of generative AI into Ansible Automation Platform. This document specifically describes the integration of {LightspeedFullName}.
 
-{LightspeedShortName} uses {ibmwatsonxcodeassistant} models trained on subject matter expertise across the Ansible ecosystem, which includes {Galaxy}, GitHub, and Ansible Certified and Validated content. It is integrated with your existing Ansible developer workflows. You can use your existing Git repositories (both public and private) to train your {ibmwatsonxcodeassistant} model. You can access {LightspeedShortName} content suggestions in Visual Studio Code (VS Code) by using the Ansible VS Code extension. 
+{LightspeedShortName} uses {ibmwatsonxcodeassistant} models trained on subject matter expertise across the Ansible ecosystem, which includes Galaxy, GitHub, and Ansible certified and validated content. For ease of use, {LightspeedShortName} is integrated with your existing Ansible developer workflows. For example, you can use your existing Git repositories (both public and private) to train your {ibmwatsonxcodeassistant} models. You can also access Lightspeed content suggestions in VS Code through the Ansible VS code extension.
 
 == Accessing {LightspeedFullName}
 
