--- a/lightspeed/modules/con_lightspeed-process.adoc
+++ b/lightspeed/modules/con_lightspeed-process.adoc
@@ -11,7 +11,7 @@ To use {LightspeedShortName}, ensure that you have the following components:
 * Trial or paid subscription to {PlatformNameShort}
 * Trial or paid subscription to {ibmwatsonxcodeassistant}
 * VS Code version 1.70.1 or later
-* Ansible extension for VS Code version 2.8 or later
+* The Ansible extension for VS Code version 2.8 or later
 
 == Process for using {LightspeedShortName}
 
