--- a/lightspeed/modules/proc_single-task-recs.adoc
+++ b/lightspeed/modules/proc_single-task-recs.adoc
@@ -9,7 +9,7 @@ You can request code recommendations for a single task by entering natural langu
 .Prerequisites
 
 * You are part of an organization that has a trial or paid subscription to both {PlatformNameShort} and {ibmwatsonxcodeassistant}.
-* You have xref:configuring-with-code-assistant_lightspeed-user-guide[installed and configured Ansible VS Code extension].
+* You have xref:configuring-with-code-assistant_lightspeed-user-guide[installed and configured the Ansible VS Code extension].
 
 .Procedure
 
