--- a/lightspeed/titles/lightspeed-release-notes/modules/lightspeed-intro.adoc
+++ b/lightspeed/titles/lightspeed-release-notes/modules/lightspeed-intro.adoc
@@ -2,7 +2,7 @@
 
 [role="_abstract"]
 = Overview
-{LightspeedFullName} is a generative AI service that helps automation teams create, adopt, and maintain Ansible content more efficiently. It uses natural language prompts to generate code recommendations for automation tasks based on Ansible best practices. {LightspeedShortName} is the cloud service that enables integration of generative AI into Ansible Automation Platform.
+{LightspeedFullName} is a generative AI service that helps automation teams create, adopt, and maintain Ansible content more efficiently. It uses natural language prompts to generate code recommendations for automation tasks based on Ansible best practices. {LightspeedShortName} is also the cloud service that enables integration of generative AI into Ansible Automation Platform.
 
 To use {LightspeedFullName}, your organization must have:
 
