AAP-20603: Removed one seat assignment reference

--- a/lightspeed/modules/proc_configure-custom-models-lightspeed.adoc
+++ b/lightspeed/modules/proc_configure-custom-models-lightspeed.adoc
@@ -10,7 +10,7 @@ You can specify one of the following configurations for using the custom model:
 
 * *Enable access for all users in your organization*
 +
-You can configure the custom model as the default model for your organization. All users in your organization who have a {LightspeedshortName} seat assigned can use the custom model. 
+You can configure the custom model as the default model for your organization. All users in your organization can use the custom model. 
 
 * *Enable access for select Ansible users in your organization*
 +
