AAP-20603: Updated content per consumption-based pricing changes (#1013)
* AAP-20603: Updated content per consumption-based pricing changes

* AAP-20603: Updated content per consumption-based pricing changes and WCA trials

* AAP-20603: Updated user scenario and addressed few peer rev comments

* AAP-20603: Updated content per consumption-based pricing changes and incorporated PM feedback

* AAP-20603: Updated content per consumption-based pricing changes and incorporated peer feedback

* AAP-20603: Removed one seat assignment reference

--- a/lightspeed/modules/con-lightspeed-about.adoc
+++ b/lightspeed/modules/con-lightspeed-about.adoc
@@ -8,12 +8,14 @@
 
 {LightspeedShortName} is the cloud service that enables integration of generative AI into Ansible Automation Platform. This document specifically describes the integration of {LightspeedFullName}.
 
+{LightspeedShortName} uses {ibmwatsonxcodeassistant} models trained on subject matter expertise across the Ansible ecosystem, which includes Galaxy, GitHub, and Ansible certified and validated content. For ease of use, {LightspeedShortName} is integrated with your existing Ansible developer workflows. For example, you can use your existing Git repositories (both public and private) to train your {ibmwatsonxcodeassistant} models. You can also access Lightspeed content suggestions in VS Code through the Ansible VS code extension.
+
+== Accessing {LightspeedFullName}
+
 To use {LightspeedFullName}, your organization must have:
 
 * A trial or paid subscription to {PlatformNameShort} 
 * A trial or paid subscription to {ibmwatsonxcodeassistant}
-
-{LightspeedShortName} uses {ibmwatsonxcodeassistant} models trained on subject matter expertise across the Ansible ecosystem, which includes {Galaxy}, GitHub, and Ansible Certified and Validated content. It is integrated with your existing Ansible developer workflows. You can use your existing Git repositories (both public and private) to train your {ibmwatsonxcodeassistant} model. You can access {LightspeedShortName} content suggestions in Visual Studio Code (VS Code) by using the Ansible VS Code extension. 
 
 == Benefits of using {LightspeedShortName}
 {LightspeedFullName} offers the following benefits: 
