--- a/lightspeed/modules/proc_provide-feedback.adoc
+++ b/lightspeed/modules/proc_provide-feedback.adoc
@@ -4,7 +4,7 @@
 
 = Providing feedback on the Ansible Lightspeed service
 
-{LightspeedFullName} is designed to be improved through feedback on the quality of its suggestions. The technical details of user experiences with Lightspeed are usefull in informing further improvements.
+{LightspeedFullName} is designed to be improved through feedback on the quality of its suggestions. The technical details of user experiences with {LightspeedShortName} are useful in informing further improvements.
 
 You can submit feedback through the following channels: 
 
@@ -18,7 +18,7 @@ NOTE: On the login screen of the link:https://c.ai.ansible.redhat.com/[Ansible L
 
 .Prerequisites
 
-* You have an assigned seat license to access {LightspeedFullName}.
+* You are part of an organization that has a trial or paid subscription to both {PlatformNameShort} and {ibmwatsonxcodeassistant}.
 
 .Procedure
 
