--- a/downstream/modules/platform/ref-eda-system-requirements.adoc
+++ b/downstream/modules/platform/ref-eda-system-requirements.adoc
@@ -4,6 +4,11 @@
 
 The {EDAcontroller} is a single-node system capable of handling a variable number of long-running processes (such as, Rulebook activations) on-demand, depending on the number of CPU cores. Use the following minimum requirements to execute a maximum of 9 simultaneous activations:
 
+[NOTE]
+====
+If you plan to run {EDAName} on {RHEL} 8, you must have cgroup v2 enabled on your system to set memory limits. For specific instructions, see the Knowledge-Centered Support (KCS) article, link:https://access.redhat.com/solutions/7054905[Ansible Automation Platform Event-Driven Ansible controller for RHEL 8 requires cgroupv2].
+====
+
 [cols="a,a",options="header"]
 |===
 h| Requirement | Required
