--- a/downstream/modules/platform/ref-system-requirements.adoc
+++ b/downstream/modules/platform/ref-system-requirements.adoc
@@ -16,7 +16,7 @@ h| Subscription | Valid {PlatformName} |
 
 h| OS | {RHEL} 8.6 or later 64-bit (x86, ppc64le, s390x, aarch64) |{PlatformName} is also supported on OpenShift, see link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/{PlatformVers}/html/deploying_the_red_hat_ansible_automation_platform_operator_on_openshift_container_platform/index[Deploying the Red Hat Ansible Automation Platform operator on OpenShift Container Platform] for more information.
 
-h| Ansible | version 2.14 (to install) | {PlatformNameShort} ships with execution environments that contain ansible-core {AnsibleCoreVers}.
+h| Ansible | version 2.9 | {PlatformNameShort} ships with execution environments that contain ansible-core {AnsibleCoreVers}.
 
 h| Python | 3.9 or later |
 
@@ -24,6 +24,11 @@ h| Browser | A currently supported version of Mozilla FireFox or Google Chrome |
 
 h| Database | PostgreSQL version 13 |
 |===
+
+[NOTE]
+====  
+The next major release of Ansible Tower will not support Red Hat Enterprise Linux 7 or CentOS (any version) as an installation platform.
+====
 
 The following are necessary for you to work with project updates and collections:
 
@@ -33,7 +38,7 @@ The following are necessary for you to work with project updates and collections
 [NOTE]
 ====
 The requirements for systems managed by {PlatformNameShort} are the same as for Ansible.
-See link:https://docs.ansible.com/ansible/latest/getting_started/index.html[Getting started with Ansible] in the Ansible _User Guide_.
+See link:https://docs.ansible.com/ansible-tower/3.8.3/html/installandreference/install_notes_reqs.html#ir-general-install-notes[Ansible Automation Hub General Installation Notes] in the Ansible documentation database.
 ====
 
 .Additional notes for {PlatformName} requirements
