--- a/downstream/modules/platform/ref-eda-system-requirements.adoc
+++ b/downstream/modules/platform/ref-eda-system-requirements.adoc
@@ -6,7 +6,7 @@ The {EDAcontroller} is a single-node system capable of handling a variable numbe
 
 [NOTE]
 ====
-If you plan to run {EDAName} on {RHEL} 8, you must have cgroup v2 enabled on your system to set memory limits. For specific instructions, see the Knowledge-Centered Support (KCS) article, link:https://access.redhat.com/solutions/7054905[Ansible Automation Platform Event-Driven Ansible controller for RHEL 8 requires cgroupv2].
+If you are running {RHEL} 8 and want to set your memory limits, you must have cgroup v2 enabled before you install {EDAName}. For specific instructions, see the Knowledge-Centered Support (KCS) article, link:https://access.redhat.com/solutions/7054905[Ansible Automation Platform Event-Driven Ansible controller for RHEL 8 requires cgroupv2].
 ====
 
 [cols="a,a",options="header"]
