--- a/downstream/modules/platform/ref-system-requirements.adoc
+++ b/downstream/modules/platform/ref-system-requirements.adoc
@@ -25,11 +25,6 @@ h| Browser | A currently supported version of Mozilla FireFox or Google Chrome |
 h| Database | PostgreSQL version 13 |
 |===
 
-[NOTE]
-====  
-The next major release of Ansible Tower will not support Red Hat Enterprise Linux 7 or CentOS (any version) as an installation platform.
-====
-
 The following are necessary for you to work with project updates and collections:
 
 * Ensure that the link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html/red_hat_ansible_automation_platform_planning_guide/ref-network-ports-protocols_planning[network ports and protocols] listed in _Table 5.9. Automation Hub_ are available for successful connection and download of collections from {HubName} or {Galaxy} server.
@@ -38,7 +33,7 @@ The following are necessary for you to work with project updates and collections
 [NOTE]
 ====
 The requirements for systems managed by {PlatformNameShort} are the same as for Ansible.
-See link:https://docs.ansible.com/ansible-tower/3.8.3/html/installandreference/install_notes_reqs.html#ir-general-install-notes[Ansible Automation Hub General Installation Notes] in the Ansible documentation database.
+See link:https://docs.ansible.com/ansible/latest/installation_guide/intro_installation.html#prerequisites[Installing Ansible] in the Ansible documentation database.
 ====
 
 .Additional notes for {PlatformName} requirements
