AAP-18798 Added new note about RHEL 8 requiring updates to cgroups v2 for setting mem limits

--- a/downstream/assemblies/eda/assembly-installation-eda-controller.adoc
+++ b/downstream/assemblies/eda/assembly-installation-eda-controller.adoc
@@ -13,7 +13,7 @@ Similar to the {ControllerName} and {HubName} components, the setup for {EDAcont
 
 [NOTE]
 ====
-If you are running {RHEL} 8 and want to set your memory limits, you must have cgroup v2 enabled before you install {EDAName}. For specific instructions, see the Knowledge-Centered Support (KCS) article, link:https://access.redhat.com/solutions/7054905[Ansible Automation Platform Event-Driven Ansible controller for RHEL 8 requires cgroupv2].
+If you are running {RHEL} 8 and want to set your memory limits, you must have cgroup v2 enabled before you install {EDAName}. For specific instructions, see the Knowledge-Centered Support (KCS) article, link:https://access.redhat.com/solutions/7054905[Ansible Automation Platform Event-Driven Ansible controller for {RHEL} 8 requires cgroupv2].
 ====
 
 include::eda/ref-installing-eda-controller-on-aap.adoc[leveloffset=+1]
