--- a/downstream/modules/platform/proc-controller-create-credential.adoc
+++ b/downstream/modules/platform/proc-controller-create-credential.adoc
@@ -14,7 +14,7 @@ endif::controller-UG[]
 .Procedure
 . From the navigation panel, select menu:Resources[Credentials].
 ifdef::controller-GS[]
-. To add a new credential, see link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html-single/automation_controller_user_guide/index#controller-getting-started-create-credential[Add a new Credential] in the Automation _{ControllerUG}_.
+. To add a new credential, see link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html-single/automation_controller_user_guide/index#controller-getting-started-create-credential[Creating a credential] in the _{ControllerUG}_.
 +
 [NOTE]
 ====
