Removed duplicates and added missing lines
Removed duplicate hub parameters and added missing EDA parameters

Running the script as described fails

https://issues.redhat.com/browse/AAP-20952

--- a/downstream/modules/platform/ref-single-controller-hub-eda-with-managed-db.adoc
+++ b/downstream/modules/platform/ref-single-controller-hub-eda-with-managed-db.adoc
@@ -95,11 +95,10 @@ sso_keystore_password=''
 
 # Boolean flag used to verify Automation Controller's
 # web certificates when making calls from Automation EDA Controller.
-#
 # automationedacontroller_controller_verify_ssl = true
-
-# Certificate and key to install in Automation Hub node
-# automationhub_ssl_cert=/path/to/automationhub.cert
-# automationhub_ssl_key=/path/to/automationhub.key
+#
+# Certificate and key to install in Automation EDA Controller node
+# automationedacontroller_ssl_cert=/root/eda.crt
+# automationedacontroller_ssl_key=/root/eda.key
 
 -----
