--- a/stories/assembly-gcp-release-notes-24.adoc
+++ b/stories/assembly-gcp-release-notes-24.adoc
@@ -8,6 +8,7 @@ ifdef::context[:parent-context: {context}]
 
 This release includes a number of enhancements, additions, and fixes that have been implemented for {AAPonGCP}.
 
+include::topics/ref-gcp-release-notes-2-4-20240215-00.adoc[leveloffset=+1]
 include::topics/ref-gcp-release-notes-2-4-20231024-00.adoc[leveloffset=+1]
 include::topics/ref-gcp-release-notes-2-4-20230630-00.adoc[leveloffset=+1]
 include::topics/ref-gcp-release-notes-2-3-20230221-00.adoc[leveloffset=+1]
