--- a/downstream/modules/platform/proc-controller-create-workflow-template.adoc
+++ b/downstream/modules/platform/proc-controller-create-workflow-template.adoc
@@ -54,7 +54,7 @@ Members of the Organization can create labels on a workflow template if they hav
 - Labels are only applied to the workflow templates not the job template nodes that are used in the workflow.
 
 - Select image:disassociate.png[Disassociate,10,10] beside a label to remove it. 
-When a label is removed, it is no longer associated with that particular Job or Job Template, but it will remain associated with any other jobs that reference it.
+When a label is removed, it is no longer associated with that particular Job or Job Template, but it remains associated with any other jobs that reference it.
 
 a| Yes
 
@@ -81,7 +81,7 @@ GitHub and GitLab are the supported SCM systems.
 ** If you enable webhooks, other fields display, prompting for additional information:
 *** *Webhook Service*: Select which service to listen for webhooks from.
 *** *Webhook Credential*: Optionally, provide a GitHub or GitLab personal access token (PAT) as a credential to use to send status updates back to the webhook service.
-For more information, see link:https://docs.ansible.com/automation-controller/latest/html/userguide/credentials.html#ug-credentials-cred-types[Credential Types] to create one.
+For more information, see xref:ref-controller-credential-types[Credential Types] to create one.
 +
 ** When you click btn:[Save], additional fields populate and the workflow visualizer automatically opens.
 *** *Webhook URL*: Automatically populated with the URL for the webhook service to POST requests to.
