--- a/downstream/modules/platform/proc-controller-create-job-template.adoc
+++ b/downstream/modules/platform/proc-controller-create-job-template.adoc
@@ -52,7 +52,7 @@ Choose the credential from the available options to use with this job template.
 
 Use the drop-down menu list to filter by credential type if the list is extensive.
 Some credential types are not listed because they do not apply to certain job templates. a|
-- If selected, when launching a job template that has a default credential and supplying another credential will replace the default credential if it is the same type.
+- If selected, when launching a job template that has a default credential and supplying another credential replaces the default credential if it is the same type.
 The following is an example this message:
 
 `Job Template default credentials must be replaced
@@ -61,7 +61,7 @@ for the following types in order to proceed: Machine.`
 
 - Alternatively, you can add more credentials as you see fit.
 
-- Credential prompts will show up as its own step in a later prompt window.
+- Credential prompts show up as its own step in a later prompt window.
 | Labels a| - Optionally supply labels that describe this job template, such as `dev` or `test`.
 
 - Use labels to group and filter job templates and completed jobs in the display.
@@ -73,7 +73,7 @@ Members of the Organization can create labels on a job template if they have edi
 - Once you save the job template, the labels appear in the *Job Templates* overview in the Expanded view.
 
 - Select image:disassociate.png[Disassociate,10,10] beside a label to remove it.
-When a label is removed, it is no longer associated with that particular Job or Job Template, but it will remain associated with any other jobs that reference it.
+When a label is removed, it is no longer associated with that particular Job or Job Template, but it remains associated with any other jobs that reference it.
 
 - Jobs inherit labels from the Job Template at the time of launch.
 If you delete a label from a Job Template, it is also deleted from the Job. a| - If selected, even if a default value is supplied, you are prompted when launching to supply additional labels, if needed.
@@ -98,8 +98,8 @@ As with core Ansible:
 
 For more information, see link:https://docs.ansible.com/ansible/latest/inventory_guide/intro_patterns.html[Patterns: targeting hosts and groups] in the Ansible documentation. | Yes 
 
-If not selected, the Job Template executes against all nodes in the inventory or only the nodes predefined on the *Limit* field. 
-When running as part of a workflow, the Workflow Job Template limit is used instead.
+If not selected, the job template executes against all nodes in the inventory or only the nodes predefined on the *Limit* field. 
+When running as part of a workflow, the workflow job template limit is used instead.
 | Verbosity | Control the level of output Ansible produces as the playbook executes.
 Choose the verbosity from Normal to various Verbose or Debug settings.
 This only appears in the *details* report view.
@@ -119,11 +119,11 @@ For more information about job slices, see xref:controller-job-slicing[Job Slici
 | Show Changes | Enables you to see the changes made by Ansible tasks. | Yes
 | Instance Groups | Choose link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html/automation_controller_administration_guide/controller-instance-and-container-groups[Instance and Container Groups] to associate with this job template.
 If the list is extensive, use the image:examine.png[examine,15,15] icon to narrow the options.
-Job template instance groups contribute to the job scheduling criteria, see link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html/automation_controller_administration_guide/controller-instance-and-container-groups#controller-job-runtime-behavior[Job Runtime Behavior] and link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html/automation_controller_administration_guide/controller-instance-and-container-groups#controller-control-job-run[Control Where a Job Runs] for rules.
+Job template instance groups contribute to the job scheduling criteria, see link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html/automation_controller_administration_guide/controller-instance-and-container-groups#controller-job-runtime-behavior[Job Runtime Behavior] and link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html/automation_controller_administration_guide/controller-instance-and-container-groups#controller-control-job-run[Control where a job runs] for rules.
 A System Administrator must grant you or your team permissions to be able to use an instance group in a job template.
 Use of a container group requires admin rights. a| - Yes. 
 
-If selected, you are providing the jobs preferred instance groups in order of preference. If the first group is out of capacity, subsequent groups in the list are considered until one with capacity is available, at which point that will is selected to run the job.
+If selected, you are providing the jobs preferred instance groups in order of preference. If the first group is out of capacity, later groups in the list are considered until one with capacity is available, at which point that is selected to run the job.
 
 - If you prompt for an instance group, what you enter replaces the normal instance group hierarchy and overrides all of the organizations' and inventories' instance groups.
 
@@ -138,7 +138,7 @@ For more information and examples see link:https://docs.ansible.com/ansible/late
 * *Privilege Escalation*: If checked, you enable this playbook to run as an administrator.
 This is the equivalent of passing the `--become` option to the `ansible-playbook` command.
 * *Provisioning Callbacks*: If checked, you enable a host to call back to {ControllerName} through the REST API and start a job from this job template.
-For more information, see link:https://docs.ansible.com/automation-controller/latest/html/userguide/job_templates.html#ug-provisioning-callbacks[Provisioning Callbacks].
+For more information, see xref:controller-provisioning-callbacks[Provisioning Callbacks].
 * *Enable Webhook*: If checked, you turn on the ability to interface with a predefined SCM system web service that is used to launch a job template.
 GitHub and GitLab are the supported SCM systems.
 ** If you enable webhooks, other fields display, prompting for additional information:
@@ -151,12 +151,12 @@ image::ug-job-templates-options-webhooks.png[Job templates webhooks]
 You must configure this in the settings on the webhook service in order for {ControllerName} to accept webhooks from this service.
 ** *Webhook Credential*: Optionally, provide a GitHub or GitLab personal access token (PAT) as a credential to use to send status updates back to the webhook service.
 Before you can select it, the credential must exist.
-See link:https://docs.ansible.com/automation-controller/latest/html/userguide/credentials.html#ug-credentials-cred-types[Credential Types] to create one.
-** For additional information about setting up webhooks, see link:https://docs.ansible.com/automation-controller/latest/html/userguide/webhooks.html#ug-webhooks[Working with Webhooks].
-* *Concurrent Jobs*: If checked, you are allowing jobs in the queue to run simultaneously if not dependent on one another. Check this box if you want to run job slices simultaneously. For more information, see link:https://docs.ansible.com/automation-controller/latest/html/userguide/jobs.html#ug-job-concurrency[Automation Controller Capacity Determination and Job Impact].
+See xref:ref-controller-credential-types[Credential Types] to create one.
+** For additional information about setting up webhooks, see xref:controller-work-with-webhooks[Working with Webhooks].
+* *Concurrent Jobs*: If checked, you are allowing jobs in the queue to run simultaneously if not dependent on one another. Check this box if you want to run job slices simultaneously. For more information, see xref:controller-work-with-webhooks[{ControllerNameStart} capacity determination and job impact].
 * *Enable Fact Storage*: If checked, {ControllerName} stores gathered facts for all hosts in an inventory related to the job running.
-* *Prevent Instance Group Fallback*: Check this option to allow only the instance groups listed in the *Instance Groups* field to execute the job.
-If clear, all available instances in the execution pool are used based on the hierarchy described in link:http://docs.ansible.com/automation-controller/4.4/html/administration/containers_instance_groups.html#ag-instance-groups-control-where-job-runs[Control Where a Job Runs].
+* *Prevent Instance Group Fallback*: Check this option to allow only the instance groups listed in the *Instance Groups* field to run the job.
+If clear, all available instances in the execution pool are used based on the hierarchy described in link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html-single/automation_controller_administration_guide/index[Control where a job runs].
 . Click btn:[Save], when you have completed configuring the details of the job template.
 
 Saving the template does not exit the job template page but advances to the *Job Template Details* tab.
