--- a/downstream/titles/operator-mesh/master.adoc
+++ b/downstream/titles/operator-mesh/master.adoc
@@ -3,6 +3,7 @@
 :toclevels: 1
 
 :experimental:
+:operator-mesh:
 
 include::attributes/attributes.adoc[]
 
@@ -20,7 +21,7 @@ include::{DocumentationFeedback}[leveloffset=+1]
 
 include::platform/assembly-planning-mesh.adoc[leveloffset=+1]
 
-//include::platform/assembly-setting-up-automation-mesh.adoc[leveloffset=+1]
+include::platform/assembly-automation-mesh-operator-aap.adoc[leveloffset=+1]
 
 //include::platform/assembly-mesh-design-patterns.adoc[leveloffset=+1]
 
