Create structure for operator-based mesh guide
Correction

Controller 4.5: The mesh scaling & hop nodes feature's documentation for OCP and managed Azure customers

https://issues.redhat.com/browse/AAP-19132

--- a/downstream/modules/platform/proc-define-mesh-node-types.adoc
+++ b/downstream/modules/platform/proc-define-mesh-node-types.adoc
@@ -44,7 +44,7 @@ Options:
 ** Check the *Managed by Policy* box to enable policy to dictate how the instance is assigned.
 ** Check the *Peers from control nodes* box to enable control nodes to peer to this instance automatically. For hop nodes, check the *Peers from Control* nodes box to create a direct communication link between the hop node and {ControllerName}. 
 For execution nodes that communicate with hop nodes, do not check this box.
-*** To peer an execution node with a hop node, click the image:search.png[Search,15,15] icon next to the *Peers* field.
+** To peer an execution node with a hop node, click the image:search.png[Search,15,15] icon next to the *Peers* field.
 +
 The Select Peers window is displayed.
 +
