clarify module purpose and add prerequisites

--- a/downstream/modules/hub/proc-configure-proxy-remote.adoc
+++ b/downstream/modules/hub/proc-configure-proxy-remote.adoc
@@ -6,7 +6,13 @@
 = Configuring proxy settings
 
 [role="_abstract"]
-You can choose to configure a proxy remote to sync your Ansible collections. 
+You can configure a proxy remote to sync content located outside of your local network. 
+
+.Prerequisites
+
+* You have valid *Modify Ansible repo content* permissions.
+For more information on permissions, see link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/{PlatformVers}/html/getting_started_with_automation_hub/assembly-user-access[Managing user access in automation hub].
+* You have a proxy URL and credentials from your local network administrator. 
 
 .Procedure
 . Log in to {PlatformNameShort}.
