--- a/downstream/modules/platform/proc-controller-create-workflow-template.adoc
+++ b/downstream/modules/platform/proc-controller-create-workflow-template.adoc
@@ -62,7 +62,7 @@ If selected, even if a default value is supplied, you are prompted when launchin
 - You cannot delete existing labels, selecting image:disassociate.png[Disassociate,10,10] only removes the newly added labels, not existing default labels.
 | Variables a| - Pass extra command line variables to the playbook. 
 
-This is the "-e" or "-extra-vars" command line parameter for ansible-playbook that is documented in the Ansible documentation at link:http://docs.ansible.com/playbooks_variables.html#passing-variables-on-the-command-line[Passing Variables on the Command Line].
+This is the "-e" or "-extra-vars" command line parameter for ansible-playbook that is documented in the Ansible documentation at link:https://docs.ansible.com/ansible/latest/reference_appendices/general_precedence.html[Controlling how Ansible behaves: precedence rules].
 - Provide key or value pairs by using either YAML or JSON. These variables have a maximum value of precedence and overrides other variables specified elsewhere. The following is an example value:
 `git_branch: production
 release_version: 1.5` | Yes
