Removed duplicates and added missing lines
Correction

Running the script as described fails

https://issues.redhat.com/browse/AAP-20952

--- a/downstream/modules/platform/ref-single-controller-hub-eda-with-managed-db.adoc
+++ b/downstream/modules/platform/ref-single-controller-hub-eda-with-managed-db.adoc
@@ -94,7 +94,7 @@ sso_keystore_password=''
 # postgres_ssl_key=/path/to/pgsql.key
 
 # Boolean flag used to verify Automation Controller's
-# web certificates when making calls from Automation EDA Controller.
+# web certificates when making calls from Automation {EDAcontroller}.
 # automationedacontroller_controller_verify_ssl = true
 #
 # Certificate and key to install in Automation EDA Controller node
