Removed duplicates and added missing lines
Correction

Running the script as described fails

https://issues.redhat.com/browse/AAP-20952

--- a/downstream/modules/platform/ref-single-controller-hub-eda-with-managed-db.adoc
+++ b/downstream/modules/platform/ref-single-controller-hub-eda-with-managed-db.adoc
@@ -97,7 +97,7 @@ sso_keystore_password=''
 # web certificates when making calls from Automation {EDAcontroller}.
 # automationedacontroller_controller_verify_ssl = true
 #
-# Certificate and key to install in Automation EDA Controller node
+# Certificate and key to install in Automation {EDAcontroller} node
 # automationedacontroller_ssl_cert=/path/to/automationeda.crt
 # automationedacontroller_ssl_key=/path/to/automationeda.key
 
