--- a/downstream/assemblies/platform/assembly-automation-mesh-operator-aap.adoc
+++ b/downstream/assemblies/platform/assembly-automation-mesh-operator-aap.adoc
@@ -17,5 +17,15 @@ For more information, see link:https://access.redhat.com/documentation/en-us/red
 include::platform/ref-operator-mesh-prerequisites.adoc[leveloffset=+1]
 include::platform/proc-set-up-virtual-machines.adoc[leveloffset=+1]
 include::platform/proc-define-mesh-node-types.adoc[leveloffset=+1]
+include::platform/ref-removing-instances.adoc[leveloffset=+2]
+include::platform/proc-controller-create-instance-group.adoc[leveloffset=+1]
+include::platform/proc-controller-associate-instance-to-instance-group.adoc[leveloffset=+1]
+include::platform/proc-run-jobs-on-execution-nodes.adoc[leveloffset=+1]
+include::platform/proc-connecting-nodes-through-mesh-ingress.adoc[leveloffset=+1]
+
+
+
+
+
 
 
