--- a/downstream/modules/hub/proc-configure-proxy-remote.adoc
+++ b/downstream/modules/hub/proc-configure-proxy-remote.adoc
@@ -6,7 +6,7 @@
 = Configuring proxy settings
 
 [role="_abstract"]
-You can configure a proxy remote to sync content located outside of your local network. 
+If your {PrivateHubName} is behind a network proxy, you can configure proxy settings on the remote to sync content located outside of your local network. 
 
 .Prerequisites
 
