Create structure for operator-based mesh guide
Added module

Controller 4.5: The mesh scaling & hop nodes feature's documentation for OCP and managed Azure customers

https://issues.redhat.com/browse/AAP-19132

--- a/downstream/assemblies/platform/assembly-automation-mesh-operator-aap.adoc
+++ b/downstream/assemblies/platform/assembly-automation-mesh-operator-aap.adoc
@@ -22,6 +22,8 @@ include::platform/proc-controller-create-instance-group.adoc[leveloffset=+1]
 include::platform/proc-controller-associate-instances-to-instance-group.adoc[leveloffset=+1]
 include::platform/proc-run-jobs-on-execution-nodes.adoc[leveloffset=+1]
 include::platform/proc-connecting-nodes-through-mesh-ingress.adoc[leveloffset=+1]
+include::platform/proc-pulling-the-secret.adoc[leveloffset=+1]
+
 
 
 
