Create structure for operator-based mesh guide
Added images

Controller 4.5: The mesh scaling & hop nodes feature's documentation for OCP and managed Azure customers

https://issues.redhat.com/browse/AAP-19132

--- a/downstream/modules/platform/proc-define-mesh-node-types.adoc
+++ b/downstream/modules/platform/proc-define-mesh-node-types.adoc
@@ -17,7 +17,7 @@ The following procedure demonstrates how to set the node type for the hosts.
 . On the *Instances* list page, click btn:[Add]. 
 The *Create new Instance* window opens.
 +
-image?
+image:instances_create_new.png[Create new Instance]
 +
 An instance requires the following attributes:
 
@@ -52,7 +52,7 @@ Peer the execution node to the hop node.
 
 . Click btn:[Save].
 +
-image???
+image:instances_create_details.png[Create Instance details]
 
 . To view a graphical representation of your updated topology, see link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html/automation_controller_administration_guide/assembly-controller-topology-viewer[Topology viewer].
 
@@ -63,7 +63,7 @@ The following steps are to be run from any computer that has SSH access to the n
 
 . Click the image:download.png[Download,15,15] icon next to *Install Bundle* to download the tarball that includes this new instance and the files necessary to install the created node into the {AutomationMesh}.
 +
-image??
+image:instances_install_bundle.png[Install instance]
 +
 The install bundle contains TLS certificates and keys, a certificate authority, and a proper Receptor configuration file.
 +
@@ -145,7 +145,7 @@ ansible-playbook -i inventory.yml install_receptor.yml
 +
 After this playbook runs, your automation mesh is configured.
 +
-image???
+image::instances-list-view2.png[Instances list view]
 
 
 
