Create structure for operator-based mesh guide
Conditionalized first assembly and modules, added images, corrections to
formatting

Controller 4.5: The mesh scaling & hop nodes feature's documentation for OCP and managed Azure customers

https://issues.redhat.com/browse/AAP-19132

--- a/downstream/modules/platform/proc-define-mesh-node-types.adoc
+++ b/downstream/modules/platform/proc-define-mesh-node-types.adoc
@@ -37,7 +37,7 @@ This field is equivalent to `listener_port` in the API.
 The default value is 27199, though you can set your own port value.
 * *Instance Type*: Only `execution` and `hop` nodes can be created. 
 Operator based deployments do not support Control or Hybrid nodes.
-
++
 Options:
 
 ** *Enable Instance*: Check this box to make it available for jobs to run on an execution node.
@@ -54,8 +54,8 @@ Peer the execution node to the hop node.
 +
 image:instances_create_details.png[Create Instance details]
 
-. To view a graphical representation of your updated topology, see link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html/automation_controller_administration_guide/assembly-controller-topology-viewer[Topology viewer].
-
+. To view a graphical representation of your updated topology, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-controller-topology-viewer[Topology viewer].
++
 [NOTE]
 ====
 The following steps are to be run from any computer that has SSH access to the newly created instance. 
@@ -145,7 +145,7 @@ ansible-playbook -i inventory.yml install_receptor.yml
 +
 After this playbook runs, your automation mesh is configured.
 +
-image::instances-list-view2.png[Instances list view]
+image::instances_list_view2.png[Instances list view]
 
 
 
